# conanmoban

./: conanfile.py  deploy_manifest.txt  readme.md  tests.sh
cligod/: conanfile.py  readme.md
cligod/src/: CMakeLists.txt
headergod/: conanfile.py  readme.md
headergod/src/headergod/: headergod.h
headergod/test_package/: conanfile.py  example.cpp
libgod/: conanfile.py  readme.md
libgod/src/: CMakeLists.txt
libgod/src/libgod/: libgod.cpp  libgod.h
libgod/test_package/: CMakeLists.txt  conanfile.py  example.cpp
src/: CMakeLists.txt
src/conanmoban/: add_data.h  cmakelists.cpp  conanfile_py.cpp  conanmoban.cpp  cotire_cmake.cpp  default_opts.cpp  default_opts.h  git_attr.cpp  git_ignore.cpp  hello_header_only.cpp  hello_lib.cpp  hello_world.cpp  magic_enum.cpp  magic_enum.h  proj_type.cpp  proj_type.h  templates.h  test_package_cpp.cpp
